<resources>
    <string name="app_name">TutorialXv1</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login2">Login</string>
    <string name="register">Register</string>
    <string name="register2">Register</string>
    <string name="repassword">repassword</string>
    <string name="not_registered_yet_signup">not registered yet? signup</string>
    <string name="grade">grade</string>
    <string name="zoom_link">Zoom Link</string>
    <string name="subject">subject</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="add_class">Add class</string>
    <string name="title_activity_student_home">studentHome</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="get_started">Get Started</string>
    <string name="getStarted2">As a teacher, you can use EduX to share your knowledge and expertise with students who are eager to learn.</string>
    <string name="GetStarted">Welcome to EduX, the ultimate learning platform for students in Sri Lanka! Here, you can access free courses and borrow books from generous donors who want to help you succeed.</string>
    <string name="getStarted3">As a donor, you can use EduX to give back to your community by sharing your unused books with students who need them</string>
    <string name="AddQuizInfo">Quiz Informations</string>
    <string name="QuizName">Enter Quiz name</string>
    <string name="NoOfQuestions">Enter No.of Questions</string>
    <string name="GradeQuiz">Enter Grade</string>
    <string name="Course">Enter Course</string>
    <string name="CreateQuiz">Create Quiz</string>
    <string name="Quesion1">Question 04</string>
    <string name="Question">printf(\"%.2f,\",3.1235) what is the Output of this statement</string>
    <string name="mcq1">0</string>
    <string name="Next">NEXT</string>
    <string name="PREVIOUS">PREVIOUS</string>
    <string name="Results">Results</string>
    <string name="marks">Your Marks is 70%</string>
    <string name="FinishQuiz">Exit</string>
    <string name="donateH1">Donate Books Info </string>
    <string name="BookTitle">Enter Book Title</string>
    <string name="_10_questions">10 Questions</string>
    <string name="show">Show</string>
    <string name="grade_11_maths">Grade11 Maths</string>
    <string name="add_quizes">Add Quizes</string>
    <string name="_15_questions">15 Questions</string>
    <string name="quizes1">Quizes 01</string>
    <string name="garde_7_maths">Grade 7 maths</string>
    <string name="title_activity_update_dialog">updateDialog</string>


</resources>