<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/NoOfQuizes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.sehan.Add_Quiz_Info">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="452dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/AddQuiz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/oswald"
        android:shadowColor="#0E0E0E"
        android:shadowDx="100"
        android:text="@string/AddQuizInfo"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="137dp"
        android:layout_height="101dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddQuiz1"
        app:srcCompat="@drawable/undraw_questions_re_1fy7" />

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="378dp"
        android:layout_height="271dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="19dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <EditText
            android:id="@+id/itQuizName"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/input_fields"
            android:backgroundTint="@color/InputFiels"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/QuizName"
            android:inputType="textPersonName"
            android:paddingBottom="15sp" />

        <EditText
            android:id="@+id/itNoOfQuiz"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/input_fields"
            android:backgroundTint="@color/InputFiels"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/NoOfQuestions"
            android:inputType="textPersonName"
            android:paddingBottom="15sp" />

        <EditText
            android:id="@+id/itGrade"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/input_fields"
            android:backgroundTint="@color/InputFiels"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/GradeQuiz"
            android:inputType="textPersonName"
            android:paddingBottom="15sp" />

        <EditText
            android:id="@+id/itQuizCourse"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="15sp"
            android:background="@drawable/input_fields"
            android:backgroundTint="@color/InputFiels"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Course"
            android:inputType="textPersonName" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/AddQuizbtn"
        android:layout_width="164dp"
        android:layout_height="55dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/register_button"
        android:text="@string/CreateQuiz"
        android:textColor="#FEFEFE"
        app:layout_constraintEnd_toEndOf="@+id/LinearLayout01"
        app:layout_constraintStart_toStartOf="@+id/LinearLayout01"
        app:layout_constraintTop_toBottomOf="@+id/LinearLayout01" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        app:itemIconTint="#ffff"
        app:itemTextColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



</androidx.constraintlayout.widget.ConstraintLayout>

