<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.sehan.LoginIntro">

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="298dp"
        android:layout_height="137dp"
        android:layout_marginStart="180dp"
        android:layout_marginTop="152dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/get_started" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="410dp"
        android:layout_height="295dp"
        android:layout_marginBottom="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/AddQuiz1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/oswald"
        android:text="@string/get_started"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="413dp"
        android:layout_height="324dp"
        android:layout_marginTop="168dp"
        android:orientation="vertical"
        android:padding="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddQuiz1">

        <TextView
            android:id="@+id/description01"
            android:layout_width="398dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/GetStarted"
            android:textSize="17sp"
            tools:text="@string/GetStarted" />

        <TextView
            android:id="@+id/description2"
            android:layout_width="397dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="10dp"
            android:paddingTop="40dp"
            android:paddingRight="10dp"
            android:text="@string/getStarted2"
            android:textSize="17sp"
            tools:text="@string/getStarted2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="390dp"
            android:layout_height="115dp"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="10dp"
            android:paddingTop="40dp"
            android:paddingRight="10dp"
            android:text="@string/getStarted3"
            android:textSize="17sp"
            tools:text="@string/getStarted3" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Registerbtn1"
        android:layout_width="171dp"
        android:layout_height="53dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/btn1"
        android:text="Let's Start"
        android:textColor="#FEFEFE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>