<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.sehan.QuizResultActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="415dp"
        android:layout_height="321dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="115dp"
        android:layout_height="96dp"
        android:layout_marginStart="244dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Results"
        app:srcCompat="@drawable/results" />

    <TextView
        android:id="@+id/Results"
        android:layout_width="203dp"
        android:layout_height="106dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/oswald"
        android:text="@string/Results"
        android:textAlignment="center"
        android:textColor="#FEFEFE"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />

    <TextView
        android:id="@+id/displayMarks"
        android:layout_width="390dp"
        android:layout_height="106dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/marks"
        android:textAlignment="center"
        android:textColor="#6672FE"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/btn1"
        android:text="@string/FinishQuiz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayMarks"
        android:textColor="#FEFEFE"
        />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_corners"
        app:itemIconTint="#ffff"
        app:itemTextColor="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/QuizResult"
        android:layout_width="390dp"
        android:layout_height="106dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="3dp"
        android:fontFamily="sans-serif-black"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayMarks" />

</androidx.constraintlayout.widget.ConstraintLayout>